k8s/Templates/ingress.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socialdev-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "localhost"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
  - host: "${DOMAIN}"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
  - host: "api.${DOMAIN}"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 3001
  - host: "n8n.${DOMAIN}"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: n8n-service
              port:
                number: 5678
  - host: "prometheus.${DOMAIN}"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-stack-kube-prom-prometheus
              port:
                number: 9090
  - host: "grafana.${DOMAIN}"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-stack-grafana
              port:
                number: 3000
